--- a/PennState/Views/Item/gallery.cshtml
+++ b/PennState/Views/Item/gallery.cshtml
@@ -1,39 +1,3 @@
-﻿
-<div class="col-md-9">
-    <ul class="list-group" id="SortableGallery" style="cursor:move">
-        <li class="list-group-item col-md-4">
-            <div>
-                <img class="img-responsive" src="~/Content/Images/LogInPic/psu.jpg" />
-            </div>
-        </li>
-        <li class="list-group-item col-md-4">
-            <div>
-                <img class="img-responsive" src="~/Content/Images/LogInPic/psu.jpg" />
-            </div>
-        </li>
-        <li class="list-group-item col-md-4">
-            <div>
-                <img class="img-responsive" src="~/Content/Images/LogInPic/psu.jpg" />
-            </div>
-        </li>
-        <li class="list-group-item col-md-4">
-            <div>
-                <img class="img-responsive" src="~/Content/Images/LogInPic/psu.jpg" />
-            </div>
-        </li>
-        <li class="list-group-item col-md-4">
-            <div>
-                <img class="img-responsive" src="~/Content/Images/LogInPic/psu.jpg" />
-            </div>
-        </li>
-        <li class="list-group-item col-md-4">
-            <div>
-                <img class="img-responsive" src="~/Content/Images/LogInPic/psu.jpg" />
-            </div>
-        </li>
-    </ul>
-</div>
+﻿@model PennState.ViewModels.ItemDetailsModel
 
-<script>
-    $("#SortableGallery").sortable();
-</script>
+
