--- a/PennState/Content/Site.css
+++ b/PennState/Content/Site.css
@@ -243,6 +243,23 @@ p.thick {
     box-sizing: border-box;
 }
 
+.detailsModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 25%;
+    top: 25%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    width: 1200px; /* Full width */
+    height: 550px; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: white; /* Black w/ opacity */
+    box-sizing: border-box;
+}
+
 .createModal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
