--- a/PennState/Views/Item/GetItemList.cshtml
+++ b/PennState/Views/Item/GetItemList.cshtml
@@ -71,7 +71,7 @@
                             <td onclick="editItem(@item.Id)">@item.Added</td>
                             <td onclick="editItem(@item.Id)">@item.Updated</td>
                             <td>
-                                <a href="#"><i class="glyphicon glyphicon-eye-open"></i></a> |
+                                <a href="#" onclick="itemDetails(@item.Id)" data-toggle="modal"><i class="glyphicon glyphicon-eye-open"></i></a> |
                                 <a href="#" onclick="editItem(@item.Id)" data-toggle="modal"><i class="glyphicon glyphicon-edit"></i></a> |
                                 <a href="#" onclick="confirmDelete(@item.Id)"><i class="glyphicon glyphicon-trash"></i></a>
                                 <form id="itemId" hidden="hidden">
@@ -116,6 +116,17 @@
 
             </div>
         </div>
+</div>
+
+<div tabindex="-1" class="detailsModal" role="dialog" id="detailModal" data-backdrop="false">
+    <div style="bottom:20px">
+        <div class="modal-header">
+            <h3 class="modal-title" style="text-align:left">Item Details</h3>
+        </div>
+        <div class="modal-body" id="detailBod">
+
+        </div>
+    </div>
 </div>
 
 
